Fix styling issues after rails and bootstrap upgrade (#1256)
* On #1225: group order form: Prevent currency sign from line-wrapping unexpectedly

Error was: When entering numbers into the quantity/tolerance inputs the
currency sign went into the next line

* On #1225: Enhance quantity/tolerance input styling

Issues were:

- font too small to read
- too much padding
- input unnecesserarily wide
- duplicate numeric steppers (native *and* +/- buttons -> removed native
  steppers)

* On #1225: Conversion popover button: fix disabling

Was no longer properly disabled since this change:
https://github.com/foodcoops/foodsoft/pull/1247/files#diff-b1f58c278b2f33a9fb0d2c0e4c8942006d04c3daa84038cc02d6184f0f533da0R26

* On #1225: Vertically center table row contents

The original override for this (see
https://github.com/foodcoops/foodsoft/blob/a80166d664b301d81343da9df86a652ac87a5dd3/app/assets/stylesheets/bootstrap_and_overrides.css.scss#L428)
was ineffective since the bootstrap upgrade. This change reinstates it.

* On #1125: Fix article new/edit form layout (WIP!!)

* On #1225 Session create view: Fixed missing margin right of 'login' button

* On #1225: Group order form: Enhance footer styling a little

- A little more space above the save button
- Increase hacky table bottom margin to ensure the last item is still
  visible above the footer

* On #1225: Article index: Fixes styling of `selected` shared_sync_method

Styling of the form for importing single articles with
`shared_sync_method = "selected"` was broken after the bootstrap
upgrade. Did some ugly style fixes to make it look prettier.

* On #1125: Accounting: Fixes for edit article form

- Conversion popover buttons overlapped with units for `units_to_order` and `units_received`.
- Converstion popovers: Turned placement back to 'bottom' after it had been changed to 'top' in https://github.com/foodcoops/foodsoft/pull/1146/files#diff-b1f58c278b2f33a9fb0d2c0e4c8942006d04c3daa84038cc02d6184f0f533da0R65 (can't really

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -287,8 +287,15 @@ tr.order-article {
 
   .group-order-input:not(.stock-order) {
     .goa-quantity, .goa-tolerance {
-      width: 75px;
+      width: 65px;
       text-align: right;
+      font-size: 14px;
+      padding: 4px 6px;
+      appearance: textfield;
+
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+      }
     }
   }
 
@@ -302,25 +309,19 @@ tr.order-article {
     font-size: 10px !important;
 }
 
-
 .units_received_cell {
   display: flex;
   align-items: center;
   gap: 12px;
-  width: 90px;
-
-}
-
-.units_received_cell {
-  
+  width: auto;
 
   .btn-group .btn-ordering {
     margin-top: 0;
     width: 100px;
   }
 
-  input .units_received {
-    height: 24px;
+  input.units_received {
+    width: 75px;
     -moz-appearance: textfield;
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
@@ -423,9 +424,14 @@ tr.untranslated {
 
 // center table rows vertically (including form elements)
 table.table {
-  td, th {
-    vertical-align: middle;
+  thead, tbody, tfoot > {
+    tr > {
+      td, th {
+        vertical-align: middle;
+      }
+    }
   }
+
   select, textarea, input, .uneditable-input
   {
     margin-bottom: 0;
@@ -595,12 +601,23 @@ details {
   cursor: pointer;
 }
 
-.form-horizontal .no-indent-left .control-group {
-  margin-bottom: 0;
-  .controls {
-    margin-left: 0;
+.form-horizontal {
+  .no-indent-left .control-group {
+    margin-bottom: 0;
+    .controls {
+      margin-left: 0;
+    }
+  }
+
+  .control-label {
+    hyphens: auto;
+
+    &.text-left {
+      text-align: left;
+    }
   }
 }
+
 
 // bootstrap version 2 doesn't support some styles -> let's add makeshift ones manually for now:
 .d-flex {
@@ -656,6 +673,10 @@ td.mr-1 > *:last-child {
   margin-bottom: 3px !important;
 }
 
+.pt-0 {
+  padding-top: 0 !important;
+}
+
 .pt-5 {
   padding-top: 15px;
 }
@@ -666,6 +687,14 @@ td.mr-1 > *:last-child {
 
 .text-decoration-none:hover {
   text-decoration: none;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.d-inline-block {
+  display: inline-block;
 }
 
 // Wider popovers
@@ -679,6 +708,14 @@ td.mr-1 > *:last-child {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.w-fit-content {
+  width: fit-content;
 }
 
 *[role="button"] {
